--- a/about.html
+++ b/about.html
@@ -1,72 +1,71 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
-  <head>
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>FITSEC - About Us</title>
     <!-- InstanceEndEditable -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css">
+
     <link href="img/FITSECCrest.png" rel="icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"></script>
     <link href="scripts/main.css" rel="stylesheet" type="text/css" />
     <!-- InstanceBeginEditable name="head" -->
     <!-- InstanceEndEditable -->
-  </head>
-  <body class="pt-5" onload="genBackground()">
+</head>
+
+<body class='pt-5' onload="genBackground()">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light shadow-lg">
-      <div class="container-fluid">
-        <div class="navbar-header"> <a class="navbar-brand" href="index.html">
-            <img class="nav-image" src="img/FITSECCrest.png" height="50" /> </a>
-          <a class="navbar-brand" href="index.html">FiTSEC</a> </div>
-        <button type="button" class="navbar-toggler collapsed float-right" data-toggle="collapse"
-          data-target="#topFixedNavbar1"><span
-            class="sr-only">Toggle
-            navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="topFixedNavbar1">
-          <ul class="navbar-nav nav-fill w-100">
-            <li class="nav-item dropdown mx-3"> <a href="about.html" class="nav-link dropdown-toggle"
-                data-toggle="dropdown"
-                role="button">About
-                Us</a>
-              <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="about.html#defensive">Defensive</a>
-                <a class="dropdown-item" href="about.html#offensive">Offensive</a>
-                <a class="dropdown-item" href="about.html#faq">FAQ</a> </div>
-            </li>
-            <li class="nav-item dropdown mx-3"> <a href="calendar.html" class="nav-link dropdown-toggle"
-                data-toggle="dropdown"
-                role="button">Whats
-                Going On</a>
-              <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="calendar.html">Calendar</a> <a class="dropdown-item"
-                  href="competitions.html">Competitions</a>
-                <a class="dropdown-item" href="meetings.html">Meetings</a> <a class="dropdown-item"
-                  href="workshops.html">Workshops</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown mx-3"> <a href="#" class="nav-link dropdown-toggle"
-                data-toggle="dropdown"
-                role="button">Write
-                Ups</a>
-              <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">2019</a> </div>
-            </li>
-            <li class="nav-item mx-3"> <a href="contact.html" class="nav-link"
-                role="button">Contact
-                Us</a> </li>
-          </ul>
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="index.html">
+                    <img class='nav-image' src="img/FITSECCrest.png" height="50" />
+                </a>
+                <a class="navbar-brand" href="index.html">FiTSEC</a>
+            </div>
+            <button type="button" class="navbar-toggler collapsed float-right" data-toggle="collapse" data-target="#topFixedNavbar1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="topFixedNavbar1">
+                <ul class="navbar-nav nav-fill w-100">
+                    <li class="nav-item dropdown mx-3">
+                        <a href="about.html" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">About Us</a>
+                        <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+                            <a class='dropdown-item' href="about.html#defensive">Defensive</a>
+                            <a class='dropdown-item' href="about.html#offensive">Offensive</a>
+                            <a class='dropdown-item' href="about.html#faq">FAQ</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown mx-3">
+                        <a href="calendar.html" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Getting Involved</a>
+                        <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+                            <a class='dropdown-item' href="calendar.html">Calendar</a>
+                            <a class='dropdown-item' href="competitions.html">Competitions</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown mx-3">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Write Ups</a>
+                        <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+                            <a class='dropdown-item' href="#">2019</a>
+                        </div>
+                    </li>
+                    <li class='nav-item mx-3'>
+                        <a href="contact.html" class='nav-link' role='button'>Contact Us</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
+
     <div id="background">
-      <p id="bgCode"></p>
+        <p id="bgCode"></p>
     </div>
-    <div class="fluid-container mt-3 mb-3" id="">
-      <div class="row">
-        <div class="col-10 offset-1 bg-light text-center">
-          <!-- InstanceBeginEditable name="Mainpage" --> <br />
+
+    <div class='fluid-container mt-3 mb-3' id="">
+        <div class='row'>
+            <div class='col-10 offset-1 bg-light text-center'>
+            <!-- InstanceBeginEditable name="Mainpage" --> <br />
           <br />
           <h1>About us</h1>
           <p>FITSEC is Florida Tech's Cyber Security team who is focused on
@@ -116,33 +115,21 @@
           <h1 id="faq">FAQ</h1>
           <p>
             <ul>
-              <li>Q: Do I need experience to join?</li>
-              A: Nope! We have a training pipeline created to teach the basics
-              to newcomers. This pipeline gives each new member a solid
-              foundation that enables them to delve deeper into areas of
-              interest and specialize to be more of an asset to the team.
-              <li>Q: Do I need to be Computer Science to join?</li>
-              A: Absolutely not! Being a Computer Science or Computer
-              Engineering student definitely gives you a good start, but anyone
-              is capable of learning about cybersecurity. In fact, some of our
-              competitors have been Aerospace Engineers.
-              <li>Q: When does FITSEC meet?</li>
-              A: It varies per semester. We send out a poll early in the
-              semester to identify times that are the most convenient for the
-              members to maximize attendance.
-              <li>Q: Where does FITSEC meet?</li>
-              A: This has varied in the past, however, our permanent home is now
-              Crawford 524. This is the room for all cybersecurity classes and
-              also FITSEC's clubhouse.
+              <li><strong>Q: Do I need experience to join?<br />A:</strong> Nope! We have a training pipeline created to teach the basics to newcomers. This pipeline gives each new member a solid foundation that enables them to delve deeper into areas of interest and specialize to be more of an asset to the team.</li>
+              <li><strong>Q: Do I need to be Computer Science to join?<br />A:</strong> Absolutely not! Being a Computer Science or Computer Engineering student definitely gives you a good start, but anyone is capable of learning about cybersecurity. In fact, some of our competitors have been Aerospace Engineers.</li>
+              <li><strong>Q: When does FITSEC meet?<br />A:</strong> It varies per semester. We send out a poll early in the semester to identify times that are the most convenient for the members to maximize attendance.</li>
+              <li><strong>Q: Where does FITSEC meet?<br />A:</strong> This has varied in the past, however, our permanent home is now Crawford 524. This is the room for all cybersecurity classes and also FITSEC's clubhouse.</li>
             </ul>
             <br />
           </p>
-          <!-- InstanceEndEditable --> </div>
-      </div>
+          <!-- InstanceEndEditable -->
+            </div>
+        </div>
     </div>
     <script src="scripts/main.js">
     </script>
     <script src="scripts/backgroundGen.js"></script>
-  </body>
-  <!-- InstanceEnd -->
-</html>
+</body>
+
+
+<!-- InstanceEnd --></html>
