--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"></script>
     <link href="scripts/main.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Official website for Florida Tech FITSEC Club." />
+    <meta name="keywords" content="CTF, reverse engineering, binary exploitation, web exploitation, cyber defense, Cybersecurity, FIT, Florida Tech, Florida Tech Club, fitsec" />
     <!-- InstanceBeginEditable name="head" -->
     <!-- InstanceEndEditable -->
 </head>
@@ -47,7 +50,7 @@
                     <li class="nav-item dropdown mx-3">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button">Write Ups</a>
                         <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
-                            <a class='dropdown-item' href="#">2019</a>
+                            <a class='dropdown-item' href="https://github.com/FITSEC/CTF-Writeups/tree/master/2019">2019</a>
                         </div>
                     </li>
                     <li class='nav-item mx-3'>
